# proline_markets

./: .env.example  .gitattributes  .gitignore  ALGO_API.md  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
backend/infra/docker/: init-db.sql  init-timescale.sql  migration_instrument_config.sql  patch-trade-history-close-reason.sql
backend/infra/migrations/: README.md  alembic.ini  env.py
backend/scripts/: README_seed_muhammad_saud.md  gen_seed_muhammad_saud.py  seed_client_muhammad_saud.sql
backend/services/admin/: Dockerfile  dependencies.py  instrument_service.py  main.py  requirements.txt  start.py
backend/services/b-book-engine/: Dockerfile  requirements.txt  run.py
backend/services/gateway/: Dockerfile  requirements.txt
backend/services/market-data/: Dockerfile  requirements.txt  run.py
backend/services/metaapi-worker/: Dockerfile  requirements.txt
backend/services/risk-engine/: Dockerfile  run.py
client_terminal/: CMakeLists.txt  README.md  build-msvc.ps1  build.ps1  installer.iss  run-msvc.ps1  run.ps1
client_terminal/src/: main.cpp
client_terminal/src/core/: ApiClient.cpp  ApiClient.h  ChartBridge.cpp  ChartBridge.h  Config.cpp  Config.h  Models.h  PriceStream.cpp  PriceStream.h
client_terminal/src/ui/: AccountPanel.cpp  AccountPanel.h  ChartWidget.cpp  ChartWidget.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  OrderTicket.cpp  OrderTicket.h  PositionsPanel.cpp  PositionsPanel.h  Theme.h  WalletDialog.cpp  WalletDialog.h  WatchlistWidget.cpp  WatchlistWidget.h  WebChartWidget.cpp  WebChartWidget.h
client_terminal/web/: app.js  index.html  sc_broker.js  sc_datafeed.js  sc_positions.js
deploy/: DEPLOY-GUIDE.md  DEPLOY-prolinemarket.md
deploy/nginx/: prolinemarket.conf  trustedgefx.conf
desktop-terminal/: .gitignore  CMakeLists.txt  README.md
desktop-terminal/scripts/: build.ps1  install-msvc.ps1  installer.iss  package.ps1  setup-toolchain.ps1
desktop-terminal/src/: main.cpp
desktop-terminal/src/core/: Session.cpp  Session.h
desktop-terminal/src/models/: Account.h  AccountSummary.h  Bar.h  Instrument.h  Order.h  Position.h  Tick.h
desktop-terminal/src/net/: Api.cpp  Api.h  PriceSocket.cpp  PriceSocket.h  RestClient.cpp  RestClient.h  TradeSocket.cpp  TradeSocket.h
desktop-terminal/src/ui/: ChartView.cpp  ChartView.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  MarketWatch.cpp  MarketWatch.h  OrderPanel.cpp  OrderPanel.h  OrdersTable.cpp  OrdersTable.h  PositionsTable.cpp  PositionsTable.h
docs/: algo-trading-api-guide.md  bbook-platform-complete-spec.md
docs/superpowers/plans/: 2026-04-24-algo-market-data-api.md
docs/superpowers/specs/: 2026-04-24-algo-market-data-api-design.md
docs/templates/: README.md  trade_upload_template.csv  trade_upload_template.xlsx
frontend/: protrader-homepage.html
frontend/admin/: .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
frontend/admin/src/lib/: api.ts
frontend/trader/: .dockerignore  .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/trader/public/: manifest.webmanifest  sw.js
proline_apk/: .env.example  App.js  app.json  package-lock.json  package.json
proline_apk/google-play/: GOOGLE_PLAY_SUBMISSION_GUIDE.md  account-deletion-policy.html  data-safety.md  privacy-policy.html  store-listing.md  terms-of-service.html
proline_apk/src/: config.js
proline_apk/src/components/: HeaderLogo.js
proline_apk/src/context/: ThemeContext.js
proline_apk/src/screens/: AccountsScreen.js  BuyChallengeScreen.js  ChallengeRulesScreen.js  CopyTradeScreen.js  DashboardScreen.js  ForgotPasswordScreen.js  IBScreen.js  InstructionsScreen.js  LoginScreen.js  MainTradingScreen.js  NotificationsScreen.js  OrderBookScreen.js  ProfileScreen.js  SignupScreen.js  SplashScreen.js  SupportScreen.js  WalletScreen.js
proline_apk/src/services/: socketService.js
proline_apk/src/theme/: colors.js
proline_apk/src/utils/: authApi.js
(+1184 files in other folders)
